more formatting on events; connect image links for colorbox

--- a/ui/css/thf_style.css
+++ b/ui/css/thf_style.css
@@ -1,7 +1,7 @@
 /* CSS Document */
 
 body {
-	background-image: url(../img/thf_1pxbg.jpg);
+	background-image: url(/ui/images/thf_1pxbg.jpg);
 	background-repeat: repeat-x;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size: 12px;
