--- a/ui/sass/thf_style.scss
+++ b/ui/sass/thf_style.scss
@@ -1,5 +1,3 @@
-$pink: #9e2b35;
-
 /* CSS Document */
 
 body {
@@ -12,7 +10,7 @@ body {
 
 
 a:link {
-	//color: #9f9f9f;
+	color: #9f9f9f;
 	text-decoration: none;
 }
 a:visited {
@@ -300,34 +298,4 @@ a.bot:active {
 .thumbs {
 	margin-left: 80px;
 	padding: 20px;
-}
-
-
-/*------------------------------Homemade CSS-------------------------------------------*/
-header {
-    
-    margin-left: auto;
-    margin-right: auto;
-    width: 800px;
-    
-    ul {
-        width: 650px;
-        margin: 20px 25px 20px -20px;
-        
-        li {
-            color: white;
-            text-transform:uppercase;
-            margin: 5px 10px 10px 18px;
-            float: left;
-        &:first-child {list-style:none;}
-        &:nth-child(5) {list-style:none;}
-            a {
-                color: $pink;
-            }
-        } //li
-    } //ul
-} //header
-
-.facebook_head {
-       float: right;
 }
