change font of footer to em instead of px

--- a/ui/sass/thf_style.scss
+++ b/ui/sass/thf_style.scss
@@ -54,7 +54,7 @@ footer {
     width: 800px;
     height: 100px;
     padding: 0px;
-    font-size: 10px;
+    font-size: .9em;
 
     ul {
 	    width: 465px;
