--- a/ui/sass/thf_style.scss
+++ b/ui/sass/thf_style.scss
@@ -59,7 +59,7 @@ footer {
     ul {
 	    width: 465px;
 	    height: 100px;
-	    margin: 0px;
+	    margin: 0 0 0 10px;
 	    padding: 0px;
 	    float: left;
 	    text-align: center;
@@ -70,21 +70,6 @@ footer {
 		    text-transform: uppercase;
 		    margin: 10px 10px 5px 10px;
 		    float: left;
-
-		&:first-child {
-		    list-style: none;
-		    margin-left: 15%;
-		} //1st child
-
-		&:nth-child(4) {
-		    list-style: none;
-		    margin-left: 8%;
-		} //4th child
-
-		&:nth-child(7) {
-		    list-style: none;
-		    margin-left: 20%;
-		} //7th child
 
 			a {
 			    color: #343434;
